...

  @override
  Widget build(BuildContext context) {
    final currentColor = Color(int.parse(_colorHex, radix: 16));

    return AlertDialog(
      title: const Text('Редактировать доску'),
      content: SingleChildScrollView(
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            TextField(
              controller: _titleController,
...
        TextButton(
          onPressed: () => Navigator.pop(context),
          child: const Text('Отмена'),
        ),
        ElevatedButton(
          onPressed: _saveBoard,
          child: const Text('Сохранить'),
        ),
      ],
    );
  }
}

